@@ -2,7 +2,11 @@
 
 if   [  $SERVER_PORT  ];
 then
-  java -Dserver.port=$SERVER_PORT -jar vertx-scoring-1.0.0-SNAPSHOT-fat.jar -cluster
+  if [ 8000 == $SERVER_PORT ] || [ 8001 == $SERVER_PORT ]
+    java -Dserver.port=$SERVER_PORT -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -Xmx4G -Xms4G -XX:NewRatio=9 -XX:GCTimeRatio=99 -jar vertx-scoring-1.0.0-SNAPSHOT-fat.jar -cluster
+  else
+    java -Dserver.port=$SERVER_PORT -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -Xmx2G -Xms2G -XX:NewRatio=9 -XX:GCTimeRatio=99 -jar vertx-scoring-1.0.0-SNAPSHOT-fat.jar -cluster
+  fi
 else
-  java -Dserver.port=8000 -jar vertx-scoring-1.0.0-SNAPSHOT-fat.jar -cluster
+  java -Dserver.port=8000 -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -Xmx4G -Xms4G -XX:NewRatio=9 -XX:GCTimeRatio=99 -jar vertx-scoring-1.0.0-SNAPSHOT-fat.jar -cluster
 fi
